# emscripten-calligra-mobile

./: CMakeLists.txt
filters/generic_wrapper/: generic_filter.cc
filters/libkowmf/: CMakeLists.txt
filters/libmsooxml/: CMakeLists.txt
interfaces/: CMakeLists.txt
libs/flake/: CMakeLists.txt
libs/kokross/: CMakeLists.txt
libs/kopageapp/: CMakeLists.txt
libs/koplugin/: CMakeLists.txt
libs/koproperty/: CMakeLists.txt
libs/koreport/: CMakeLists.txt
libs/kotext/: CMakeLists.txt
libs/kundo2/: CMakeLists.txt
libs/main/: CMakeLists.txt  KoApplication.cpp  KoDocInfoPropsFactory.cpp  KoDocument.cpp  KoMainWindow.cpp  KoView.cpp
libs/odf/: CMakeLists.txt  KoPageFormat.h
libs/pigment/: CMakeLists.txt
libs/textlayout/: CMakeLists.txt
libs/widgets/: CMakeLists.txt
plugins/artistictextshape/: ArtisticTextShapePlugin.cpp
plugins/chartshape/: CMakeLists.txt  ChartShapeFactory.cpp
plugins/commentshape/: Plugin.cpp
plugins/defaultTools/: Plugin.cpp
plugins/dockers/: Plugin.cpp
plugins/formulashape/: CMakeLists.txt  KoFormulaShapePlugin.cpp
plugins/mapshape/: Plugin.cpp
plugins/musicshape/: MusicShapeFactory.cpp
plugins/paragraphtool/: ParagraphPlugin.cpp
plugins/pathshapes/: PathShapesPlugin.cpp
plugins/pictureshape/: Plugin.cpp
plugins/pluginshape/: Plugin.cpp
plugins/scan/: scan.cpp
plugins/spacenavigator/: Plugin.cpp
plugins/textshape/: TextPlugin.cpp
plugins/treeshape/: Plugin.cpp
sheets/: CMakeLists.txt  FunctionModule.h
tools/: CMakeLists.txt
tools/koabstraction/: CMakeLists.txt  KoAbstractApplicationController.cpp
(+151 files in other folders)
